--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,4 +4,6 @@
 @import "_webfonts.scss";
 @import "_nav.scss";
 @import "_teaser.scss";
-@import "speaker.scss";
+@import "_speaker.scss";
+@import "_footer.scss";
+@import "formspeaker.scss";
