--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,4 +6,5 @@
 @import "_teaser.scss";
 @import "_speaker.scss";
 @import "_footer.scss";
-@import "formspeaker.scss";
+@import "_formspeaker.scss";
+@import "_icon.scss";
