--- a/src/style/_speaker.scss
+++ b/src/style/_speaker.scss
@@ -2,9 +2,18 @@
   display: flex;
   flex-direction: column;
   border:1px solid black;
+  margin: 0%;
+  list-style: none;
+  padding: 0%;
+  
   &__card{
+    list-style: none;
     &__profil{
 
+    }
+    &__profil h2{
+      display: flex;
+      flex-direction: column;
     }
     &__description{
       
