--- a/src/style/_teaser.scss
+++ b/src/style/_teaser.scss
@@ -1,21 +1,31 @@
 .teaser {
+  width: 100%;
+  max-height: 50vh;
   display: grid;
-  grid-template: 33% 33% 33%/ 50% 50%;
+  // grid-template-rows:calc('100/3') ;
+  grid-template-columns: 50% 50%;
+  // noter les colonnes et les lignes
+  //utiliser une mixin et une fonction calcul pour les 33%
   &__slogan {
-    grid-area: 2/1/2/2;
+    grid-area: 3/1/4/3;
+    order: 1;
+    font-size: 1.5rem;
+
+    
     // a ajuster avec les colones et l'order
   }
   &__background{
     background-color:mediumslateblue ;
-    width: 100%;
-    height: 10rem;
-    grid-area: 1/1/2/2;
+    height: 100%;
+    grid-area: 2/1/4/3;
+    order: -1;
 
 
 
   }
   &__image {
-    grid-area: 1/1/3/2;
+    grid-area: 1/1/4/3;
+    width: 55%;
 
 
   }
