--- a/src/style/_variable.scss
+++ b/src/style/_variable.scss
@@ -1,3 +1,8 @@
-$colors: (
-  mauve:#705ae9
-)
+// $colors: (
+//   mauve:#705ae9
+// )
+// @mixin ($color, $tier-value) {
+//   #{$color}: mauve:#705ae9;
+//   #{$tier-value}:calc(100%/3);
+
+// }
