--- a/src/style/_webfonts.scss
+++ b/src/style/_webfonts.scss
@@ -1,3 +1,26 @@
-.webfonts{
-  background-color: yellow;
+@font-face{
+  font-family: maven;
+  src: url("webfonts/maven_Pro/MavenPro-VariableFont_wght.ttf") format ("truetype-variations");
+  font-variation-settings: 'wght'400,'wght'900, ;
+
 }
+@font-face {
+  font-family: icon;
+  src: url("webfonts/codeconf-all/fonts/codeconf.woff") format("woff");
+  font-weight: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+// @font-face{
+//   font-family: maven;
+//   src: url("webfonts/maven_Pro/MavenPro-VariableFont_wght.ttf") format ("truetype-variations");
+//   font-variation-settings: 'wght'400,'wght'900, ;
+
+// }
+// @font-face{
+//   font-family: leaguespartan;
+//   src: url("webfonts/maven_Pro/MavenPro-VariableFont_wght.ttf") format ("truetype-variations");
+//   font-variation-settings: 'wght'400,'wght'900, ;
+
+// }
