--- a/src/style/_default.scss
+++ b/src/style/_default.scss
@@ -3,6 +3,32 @@ button{
   border-radius: 15% / 50%;
 }
 h1 {
-  font-family: maven;
-  font-variation-settings: 'wght'400;
+  // font-family: maven;
+  // font-variation-settings: 'wght'400;
+  font-size: 2rem;
+  font-weight: normal;
+}
+a{
+  text-decoration: none;
+  font-size: 1rem;
+}
+i{
+  font-style: normal;
+}
+h2{
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+p{
+  font-size: 1rem;
+}
+h3{
+  font-size: 1rem;
+  font-weight: normal;
+}
+strong{
+  font-weight: normal;
+}
+body{
+  margin: 0%;
 }
