--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,27 +1,25 @@
 .footer{
-  background-color: grey;
+  background-color: $color-footer;
   padding:1rem ;
+  color: white;
   &__location{
     border: 1px solid black;
     text-align: center;
-
+    // border-radius: ;
   }
-  &__sponsor
-  {
+  &__sponsor{
     display: flex;
     flex-wrap: wrap;
   }
-  &__sponsor img {
+  &__sponsor img{
     width: 33%;
   }
   &__separateur{
     width: 100%;
     height: 1px;
     background-color: white;
-
   }
   &__social{
     display: flex;
-
   }
 }
