--- a/src/style/_formspeaker.scss
+++ b/src/style/_formspeaker.scss
@@ -1,3 +1,38 @@
 .formspeaker{
-  
+  text-align: center;
+  margin-inline: 1rem;
+  &__input{
+    display: flex;
+    flex-direction: column;
+    margin-block:1rem ;
+    &__userkeyword::after{
+      content: "* [separate by comma] ";
+      vertical-align: super;
+      font-size: .5rem;
+    }
+    input{
+      border: none;
+      border-bottom: 1px solid black;  }
+  }
+  &__label::after{
+    content: "*";
+    vertical-align: super;
+    font-size: .5rem;
+  }
+  &__price{
+    margin: 0;
+    background-color:$color-footer;
+    // border-radius: ;
+  }
+}
+label {
+  position:absolute;
+  transition: all .2s;
+}
+div:focus-within label {
+  opacity:.8;
+  transform: translatey(-.9rem)scale(.8);
+}
+fieldset{
+  border: 0;
 }
