--- a/src/style/_variable.scss
+++ b/src/style/_variable.scss
@@ -1,8 +1,7 @@
-// $colors: (
-//   mauve:#705ae9
-// )
-// @mixin ($color, $tier-value) {
-//   #{$color}: mauve:#705ae9;
-//   #{$tier-value}:calc(100%/3);
+$color: #705ae9;
+$color-footer: #343237;
+$color-typo:#d9c8b8;
+$color-btn:#f74d1c;
+$tier-value:calc(100%/3);
 
-// }
+
