--- a/src/style/_teaser.scss
+++ b/src/style/_teaser.scss
@@ -1,6 +1,7 @@
 .teaser {
   width: 100%;
   display: grid;
+  margin-block-start: -3rem;
   grid-template-rows:$tier-value $tier-value $tier-value ;
   grid-template-columns: 20% 20% 20% 20% 20%;
   // grid-template-rows: @include $tier-value;
@@ -25,3 +26,4 @@
     max-width: 50%;
   }
 }
+//A terminer plus tard !!!!!
