--- a/src/style/_variable.scss
+++ b/src/style/_variable.scss
@@ -2,6 +2,7 @@ $color: #705ae9;
 $color-footer: #343237;
 $color-typo:#d9c8b8;
 $color-btn:#f74d1c;
+$color-grey:#dadada;
 $tier-value:calc(100%/3);
 
 
