--- a/src/style/_default.scss
+++ b/src/style/_default.scss
@@ -1,12 +1,10 @@
-button{
-  padding: .5rem;
-  border-radius: 15% / 50%;
-}
+
 h1 {
   // font-family: maven;
   // font-variation-settings: 'wght'400;
   font-size: 2rem;
   font-weight: normal;
+  margin: 0;
 }
 a{
   text-decoration: none;
@@ -21,6 +19,7 @@ h2{
 }
 p{
   font-size: 1rem;
+  margin: 0;
 }
 h3{
   font-size: 1rem;
@@ -32,3 +31,6 @@ strong{
 body{
   margin: 0%;
 }
+// img{
+//   width: 100%;
+// }
