--- a/src/style/_formspeaker.scss
+++ b/src/style/_formspeaker.scss
@@ -5,88 +5,79 @@
   margin-block-end: 3.5rem;
   
   &__ligne{
-    display: flex;
-    flex-direction: column;
-    &__input{
-      display: flex;
-      flex-direction: column;
-      margin-block:1rem ;
-      width: 100%;
-      &__label::after{
-        content: "*";
-        vertical-align: super;
-        font-size: .5rem;
-      }
-      &__userkeyword::after{
-        content: "* [separate by comma] ";
-        vertical-align: super;
-        font-size: .5rem;
-      }
-      &__block {
-        border: 0;
-        border-bottom : 1.5px $color-grey solid;
-      }
-    }
-
+    @include column();
+  }
+  &__input{
+    @include column();
+    margin-block:1rem ;
+  }
+  &__label::after{
+    content: "*";
+    @include afterform();
+  }
+  &__userkeyword::after{
+    content: "* [separate by comma] ";
+    @include afterform();
+  }
+  &__block {
+    border: 0;
+    border-bottom : 1.5px $color-grey solid;
   }
   // css pour le dernier input
   &__input{
-    display: flex;
-    flex-direction: column;
+    @include column();
     margin-block:1rem ;
-    &__detail{
-      height: 4rem;
-      padding: 1rem;
-      border: $color-grey 1px solid;
-    }
-    &__labeldetail{
-      margin: .5rem 0 0 .5rem;
-    }
-    &__labeldetail::after{
-      content: "*";
-      vertical-align: super;
-      font-size: .5rem;
-    }
+  }
+  &__detail{
+    height: 4rem;
+    padding: 1rem;
+    border: $color-grey 1px solid;
+  }
+  &__labeldetail{
+    margin: .5rem 0 0 .5rem;
+  }
+  &__labeldetail::after{
+    content: "*";
+    @include afterform();
   }
    &__submit{
      color: $color-btn;
      border:  1px solid $color-btn;
      background-color: white;
-     padding-inline:1.2rem ;
+     @include btn;
    }
+   &__ticket{
+    position: absolute;
+    @include column();
+    margin-block-start: 1rem;
+    margin-inline-start: -1rem;
   }
-
-.ticket{
-  position: absolute;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-block-start: 1rem;
-  margin-inline-start: -1rem;
-
-  &__btn{
+  &__ticket_btn{
     margin: auto;
     background-color: $color-btn;
     border: 0;
-    padding: 1rem 1.2rem 1rem 1.2rem;
+    @include btn;
+    padding-block:1rem ;
     & i {
       margin-inline: .3rem;
     }
     & a {
       color: white;
     }
-   &__price{
-     margin: 0;
-     background-color:$color-footer;
-     width: fit-content;
-     padding: .2rem .7rem ;
-     border-radius: 10% / 50%;
-     font-size: .5rem;
-     color: white;
-     margin-inline: auto;
-   }
   }
-}
+  &__ticket_price{
+    margin: 0;
+    background-color:$color-footer;
+    width: fit-content;
+    padding: .2rem .7rem ;
+    border-radius:1.5rem/1.75rem;
+    font-size: .5rem;
+    color: white;
+    margin-inline: auto;
+  }
+  }
+
+
 
 label {
   position:absolute;
@@ -117,8 +108,8 @@ fieldset{
       flex-direction: row;
       gap: 1rem;
     }
-  }
-  .ticket{
-    margin-inline-start: -112px;
+    &__ticket{
+      margin-inline-start: -112px;
+    }
   }
 }
