--- a/src/style/_webfonts.scss
+++ b/src/style/_webfonts.scss
@@ -1,5 +1,5 @@
 @font-face{
-  font-family: maven;
+  font-family: "maven";
   src: url("webfonts/maven_Pro/MavenPro-VariableFont_wght.ttf") format ("truetype-variations");
   font-variation-settings: 'wght'400,'wght'900, ;
 }
@@ -11,16 +11,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 @font-face{
-  font-family: leaguespartan;
-  src: url("webfonts/leaguespartan/LeagueSpartanVariable.woff2") format ("truetype-variations");
-  font-variation-settings: 'wght'100,'wght'900, ;
-
+  font-family: "leaguespartan";
+  src: url("webfonts/leaguespartan/LeagueSpartanVariable.ttf") format("ttf-variations"), url("webfonts/leaguespartan/LeagueSpartanVariable.woff2") format("woff2-variations");
+  font-weight: 200 900;
+  font-variation-settings: "wght" 200, "wght" 900;
 }
-
-// @font-face{
-//   font-family: maven;
-//   src: url("webfonts/maven_Pro/MavenPro-VariableFont_wght.ttf") format ("truetype-variations");
-//   font-variation-settings: 'wght'400,'wght'900, ;
-
-// }
-
+@font-face {
+  font-family: "museosmall";
+  src: url("webfonts/museo/museo300.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "museoregular";
+  src: url("webfonts/museo/museo500.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "museolarge";
+  src: url("webfonts/museo/museo700.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+$font_maven:"maven";
+$font_lp:"leaguespartan";
+$font_museo_small:"museosmall";
+$font_museo_regular:"museoregular";
+$font_museo_large:"museolarge";
