--- a/src/style/_speaker.scss
+++ b/src/style/_speaker.scss
@@ -16,8 +16,7 @@
       color: $color-grey;
     }
     &__profil h2{
-      display: flex;
-      flex-direction: column;
+      @include column();
     }
     &__description{
       opacity: 0;
