--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -56,7 +56,6 @@
     height: 1px;
     background-color: #dadada20;
     margin-block: 1rem;
-
   }
   &__social{
     font-family: $font-museo-regular;
@@ -148,6 +147,7 @@
       line-height: 2rem;
       border-radius:5px/5px;
       height: fit-content;
+      margin-inline-start: 1.5rem;
       & p {
         font-size: 1.3rem;
         font-family: $font-museo-regular;
