--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -25,7 +25,12 @@
   padding: 0;
   margin: 0;
   gap: 1rem;
-
+}
+.nav a {
+  color: black;
+}
+.icon-loop{
+  color: $color-btn;
 }
 .breadcrumb{
   display: flex;
@@ -34,6 +39,9 @@
   &__fraction{
     margin-block: 0;
   }
+  & i{
+    color: $color-btn;
+  } 
 }
 @media only screen and (min-width: 1000px){
   .nav{
