--- a/src/style/_teaser.scss
+++ b/src/style/_teaser.scss
@@ -23,7 +23,7 @@
     display: none;
   }
   &__background{
-    background:linear-gradient(0deg, rgba(112,90,233,1) 0%, rgba(157,141,244,1) 50%, rgba(112,90,233,1) 100%); ;
+    background:linear-gradient(0deg, rgba(95,75,232,1) 0%, rgba(116,86,232,1) 50%, rgba(95,75,232,1) 100%);
     grid-area: 2/1/4/6;
     order: -1;
   }
